# declarative-compute

./: CHANGELOG.md  LICENSE.txt  README.md
docs/: quick-start.md
examples/: CMakeLists.txt  example_usage.cpp
include/: declarative_compute.hpp
